# logd-predictor

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  firstTimeSetup.sh  pyproject.toml  train.py
conf/: config.yaml
conf/eval/: default.yaml
conf/featurizer/: circular.yaml  mol_graph_conv.yaml  rdkit.yaml
conf/model/: attentive_fp.yaml  final.yaml  gcn.yaml  random_forest.yaml
logd_predictor/: __init__.py  _io.py  chembl_scraper.py  configs.py  datasets.py  featurize.py  models.py  openadmet.py  pipeline.py  scaffold_split.py  training.py  tui.py  tui_callback.py
tests/: test_datasets.py  test_featurize.py  test_models.py  test_scaffold_split.py  test_training.py  test_uncertainty.py
